--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,7 @@
 * {
     font-family: 'Poppins', sans-serif;
 }
-.header {
-    
-}
+
 #banner {
     background-image: url("https://i.ibb.co/h7FvBtJ/banner.png");
     background-position: center;
@@ -37,6 +35,69 @@
 }
 
 /* CSS */
+
+.btn-box {
+    display: flex;
+    justify-content: space-between;
+    width: 345px;
+    height: 50px;
+}
+
+.btn-box button {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 100%;
+    background: #FE0233;
+    border: 2px solid #FE0233;
+    border-radius: 5px;
+    font-size: 19px;
+    color: red;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    z-index: 1;
+    transition: 0.5s;
+}
+
+.btn-box button:nth-child(1){
+    color: white;
+    
+}
+
+.btn-box button:nth-child(2) {
+    background: transparent;
+    color: #FE0233;
+}
+.btn-box button:nth-child(2):hover {
+    color: white;
+}
+.btn-box button::before {
+    background-color: transparent;
+}
+
+.btn-box button::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #FE0233;
+    z-index: -1;
+    transition: 0.5s;
+    overflow: hidden;
+}
+
+.btn-box button:hover::before {
+    width: 100%;
+    color: #FE0233;
+
+}
+
+
 .button {
     /* appearance: none; */
     background-color: transparent;
@@ -90,3 +151,150 @@
     background-color: transparent;
     color: #FE0233;
 }
+
+/* Loader css */
+/* HTML: <div class="loader"></div> */
+.loader {
+    width: 50px;
+    --b: 8px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background: #514b82;
+    -webkit-mask:
+      repeating-conic-gradient(#0000 0deg,#000 1deg 70deg,#0000 71deg 90deg),
+      radial-gradient(farthest-side,#0000 calc(100% - var(--b) - 1px),#000 calc(100% - var(--b)));
+    -webkit-mask-composite: destination-in;
+            mask-composite: intersect;
+    animation: l5 1s infinite;
+  }
+  @keyframes l5 {to{transform: rotate(.5turn)}}
+
+
+
+
+
+
+
+
+
+
+
+  .containers {
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: auto;
+    filter: url("#goo");
+    animation: rotate-move .4s ease-in-out infinite;
+  }
+  
+  .dot {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: #000;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+  
+  .dot-3 {
+    background-color: #ff1717;
+    animation: dot-3-move 1s ease infinite, index 1s ease infinite;
+  }
+  
+  .dot-2 {
+    background-color: #0051ff;
+    animation: dot-2-move 1s ease infinite, index 6s -1s ease infinite;
+  }
+  
+  .dot-1 {
+    background-color: #ffc400;
+    animation: dot-1-move 1s ease infinite, index 6s -1s ease infinite;
+  }
+  
+  @keyframes dot-3-move {
+    20% {
+      transform: scale(1);
+    }
+    45% {
+      transform: translateY(-18px) scale(0.45);
+    }
+    60% {
+      transform: translateY(-90px) scale(0.45);
+    }
+    80% {
+      transform: translateY(-90px) scale(0.45);
+    }
+    100% {
+      transform: translateY(0px) scale(1);
+    }
+  }
+  
+  @keyframes dot-2-move {
+    20% {
+      transform: scale(1);
+    }
+    45% {
+      transform: translate(-16px, 12px) scale(0.45);
+    }
+    60% {
+      transform: translate(-80px, 60px) scale(0.45);
+    }
+    80% {
+      transform: translate(-80px, 60px) scale(0.45);
+    }
+    100% {
+      transform: translateY(0px) scale(1);
+    }
+  }
+  
+  @keyframes dot-1-move {
+    20% {
+      transform: scale(1);
+    }
+    45% {
+      transform: translate(16px, 12px) scale(0.45);
+    }
+    60% {
+      transform: translate(80px, 60px) scale(0.45);
+    }
+    80% {
+      transform: translate(80px, 60px) scale(0.45);
+    }
+    100% {
+      transform: translateY(0px) scale(1);
+    }
+  }
+  
+  @keyframes rotate-move {
+    55% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    80% {
+      transform: translate(-50%, -50%) rotate(360deg);
+    }
+    100% {
+      transform: translate(-50%, -50%) rotate(360deg);
+    }
+  }
+  
+  @keyframes index {
+    0%,
+    100% {
+      z-index: 3;
+    }
+    33.3% {
+      z-index: 2;
+    }
+    66.6% {
+      z-index: 1;
+    }
+  }
+  
