--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lemon&family=Poppins:wght@400;500;600;700;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,6 +8,8 @@
   font-family: 'Poppins', sans-serif;
   padding: 0;
   margin: 0;
+  font-family: 'Lemon', serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 #banner {
